# ecommerce-ai-agent

./: .gitignore  .replit  DEPLOYMENT.md  GIT_SETUP.md  INTERVIEW_GUIDE.md  LICENSE  PROJECT_STATS.md  README.md  STEP_BY_STEP_GIT.md  ai_agent.py  app.py  data_loader.py  gemini.py  models.py  pyproject.toml  real_data_loader.py  replit.md  routes.py
attached_assets/: Pasted--Project-Title-Build-an-AI-Agent-to-Answer-E-commerce-Data-Questions-Datasets-Provided--1753243800058_1753243800060.txt
static/: app.js
templates/: base.html  index.html
